CSSモジュール集更新。いくつかのCSSクラスのたたき台ソースを追加した。 - パーツモジュール .error を追加。 - ユニットモジュール .float_image, .thumb_list, .pager を追加。 - 未反映：フォームの標準化コード。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -111,6 +111,15 @@
 </div><!-- /.unit -->
 
 
+<h2>その他のインライン要素</h2>
+
+<h3>エラー表示 .error</h3>
+<p><span class="error">この文言はエラー表示です。</span></p>
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;span class=&quot;error&quot;&gt;この文言はエラー表示です。&lt;/span&gt;
+</textarea></div>
+</div><!-- /.unit -->
+
 
 <h2>リスト</h2>
 
