モジュール集に要素を追加、他 - フォーム系要素追加 - 注意喚起ユニット追加 - form要素をinlineにした。 - 画像を使用するサンプルに、サンプル画像を当てた。
このリビジョンで、予定されていたモジュールが仮に一旦出揃った。細部の設計は引き続きツメていく。

--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -286,7 +286,7 @@
 <?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
 <div class="unit float_image">
 	<div class="float_image-r50per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -330,7 +330,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-r33per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -374,7 +374,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-r25per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -418,7 +418,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-l50per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -462,7 +462,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-l33per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -506,7 +506,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-l25per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body">
@@ -551,7 +551,7 @@
 
 <div class="unit float_image">
 	<div class="float_image-l25per">
-		<p class="float_image-image"><img src="XXXX" alt="" /></p>
+		<p class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></p>
 		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
 	<div class="float_image-body_rect">
@@ -634,16 +634,16 @@
 <?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
 <div class="unit thumb_list">
 	<ul>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベルサムネイルラベルサムネイルラベルサムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベルサムネイルラベルサムネイルラベルサムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
-		<li><a href="#"><img src="XXXX" alt="" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベルサムネイルラベルサムネイルラベルサムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベルサムネイルラベルサムネイルラベルサムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
+		<li><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><br />サムネイルラベル</a></li>
 	</ul>
 </div><!-- /.thumb_list -->
 <div class="unit">
@@ -715,5 +715,102 @@
 &lt;/div&gt;&lt;!-- /.pager --&gt;
 </textarea></div>
 </div><!-- /.unit -->
+
+
+<h2>注意喚起ユニット .attention (仮)</h2>
+<?php ob_start(); ?>
+<style type="text/css">
+/**
+ * [unit] 注意喚起ユニット
+ */
+.attention {
+	border:1px solid #999999;
+	padding:0 20px;
+	margin-left:20px;
+	margin-right:20px;
+	border-radius:10px;
+	background-color:#f9f9f9;
+}
+.attention .attention-heading{
+	font-weight:bold;
+	margin:1em 0;
+	font-size:120%;
+}
+</style>
+<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+<div class="unit attention">
+	<p class="attention-heading">ご注意ください</p>
+	<p>次のポイントにご注意ください。</p>
+	<ul>
+		<li>ご注意ポイントの1つ目をここに提示します。</li>
+		<li>ご注意ポイントの2つ目をここに提示します。</li>
+		<li>ご注意ポイントの3つ目をここに提示します。</li>
+	</ul>
+</div><!-- /.attention -->
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit attention&quot;&gt;
+	&lt;p class=&quot;attention-heading&quot;&gt;ご注意ください&lt;/p&gt;
+	&lt;p&gt;次のポイントにご注意ください。&lt;/p&gt;
+	&lt;ul&gt;
+		&lt;li&gt;ご注意ポイントの1つ目をここに提示します。&lt;/li&gt;
+		&lt;li&gt;ご注意ポイントの2つ目をここに提示します。&lt;/li&gt;
+		&lt;li&gt;ご注意ポイントの3つ目をここに提示します。&lt;/li&gt;
+	&lt;/ul&gt;
+&lt;/div&gt;&lt;!-- /.attention --&gt;
+</textarea></div>
+</div><!-- /.unit -->
+
+
+
+<h2>フォーム (仮)</h2>
+<p>
+	フォームエレメント系のモジュールは、パーツモジュールとして設計されています。<br />
+	<a href="../parts/">パーツモジュールのページ</a>を参照してください。<br />
+</p>
+
+<h3>送信系ボタン</h3>
+
+<?php ob_start(); ?>
+<style type="text/css">
+/**
+ * [unit] フォーム送信ボタン
+ */
+.form_buttons {
+	position:relative;
+}
+.form_buttons ul ,
+.form_buttons ul li{
+	margin:0; padding:0;
+	list-style-type:none;
+}
+</style>
+<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+
+<form action="#" method="post">
+<div class="unit form_buttons">
+	<ul>
+		<li class="form_buttons-submit"><input type="submit" name="" value="確認する" /></li>
+	</ul>
+</div><!-- /.unit -->
+</form>
+
+<form action="#" method="post">
+<div class="unit form_buttons">
+	<ul>
+		<li class="form_buttons-submit"><input type="submit" name="" value="送信する" /></li>
+		<li class="form_buttons-revise"><input type="submit" name="" value="修正する" /></li>
+	</ul>
+</div><!-- /.unit -->
+</form>
+
+<h3>キャンセルボタン</h3>
+
+<form action="#" method="post">
+<div class="unit form_buttons">
+	<ul>
+		<li class="form_buttons-cancel"><input type="submit" name="" value="キャンセル" /></li>
+	</ul>
+</div><!-- /.unit -->
+</form>
 
 
