--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -113,7 +113,7 @@
 
 <h2>その他のインライン要素</h2>
 
-<h3>エラー表示 .error</h3>
+<h3>エラー表示 .error (仮)</h3>
 <p><span class="error">この文言はエラー表示です。</span></p>
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;span class=&quot;error&quot;&gt;この文言はエラー表示です。&lt;/span&gt;
@@ -406,7 +406,269 @@
 </div><!-- /.unit -->
 
 
+<h2>フォーム (仮)</h2>
 
 
+<?php ob_start(); ?>
+<style type="text/css">
+/**
+ * [parts] フォーム要素
+ */
+table.form_elements {
+	border:none;
+	border-collapse: collapse;
+	text-align: left;
+	width:100%;
+}
+table.form_elements th,
+table.form_elements td {
+	border: 1px solid #999999;
+	padding: 10px;
+}
+table.form_elements th {
+	background: #e7e7e7;
+}
+table.form_elements thead th,
+table.form_elements tfoot th{
+	background: #d9d9d9;
+	text-align:center;
+}
+table.form_elements thead td,
+table.form_elements tfoot td{
+	background: #eeeeee;
+}
+table.form_elements tbody th {
+	width:30%;
+}
+table.form_elements tbody td {
+	width:70%;
+}
+table.form_elements .form_elements-notes {
+	font-size:86%;
+	color:#999999;
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-notes li{
+	list-style-type:none;
+	margin:0px;
+}
+table.form_elements .form_elements-list{
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-list li{
+	margin:0px; padding:0px;
+	list-style-type:none;
+}
+table.form_elements .form_elements-list_horizontal{
+	margin:0px; padding:0px;
+}
+table.form_elements .form_elements-list_horizontal li{
+	margin:0px; padding:0px;
+	list-style-type:none;
+	display:inline;
+}
+</style>
+<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+
+
+<form action="#" method="post">
+<h3>フォーム要素</h3>
+<div class="unit">
+	<table class="form_elements">
+		<thead>
+			<tr>
+				<th>入力項目名</th>
+				<th>入力フィールド</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>テキスト入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>全角カナで入力してください。</li>
+						<li>8文字以上入力してください。</li>
+					</ul>
+					<input type="text" name="" value="" />
+				</td>
+			</tr>
+			<tr>
+				<th>テキストエリア入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>複数行の入力ができます。</li>
+					</ul>
+					<textarea name=""></textarea>
+				</td>
+			</tr>
+			<tr>
+				<th>パスワード入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>8文字以上入力してください。</li>
+					</ul>
+					<input type="password" name="" value="" />
+				</td>
+			</tr>
+			<tr>
+				<th>ラジオボタン入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>一つだけ選択してください。</li>
+					</ul>
+					<ul class="form_elements-list">
+						<li><label><input type="radio" name="radio1" value="" /> 選択肢1</label></li>
+						<li><label><input type="radio" name="radio1" value="" /> 選択肢2</label></li>
+						<li><label><input type="radio" name="radio1" value="" /> 選択肢3</label></li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>チェックボックス入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>複数選択が可能です。</li>
+					</ul>
+					<ul class="form_elements-list">
+						<li><label><input type="checkbox" name="" value="" /> 選択肢1</label></li>
+						<li><label><input type="checkbox" name="" value="" /> 選択肢2</label></li>
+						<li><label><input type="checkbox" name="" value="" /> 選択肢3</label></li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>リストを水平に並べるサンプル</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>この項目は、リストを水平に並べています。(.form_elements-list_horizontal を使用)</li>
+					</ul>
+					<ul class="form_elements-list_horizontal">
+						<li><label><input type="checkbox" name="" value="" /> 選択肢1</label></li>
+						<li><label><input type="checkbox" name="" value="" /> 選択肢2</label></li>
+						<li><label><input type="checkbox" name="" value="" /> 選択肢3</label></li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<th>プルダウン選択入力</th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>１つだけ選択してください。</li>
+					</ul>
+					<select name="">
+						<option value="">選択してください</option>
+						<option value="">選択肢1</option>
+						<option value="">選択肢2</option>
+						<option value="">選択肢3</option>
+					</select>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div><!-- /.unit -->
+
+<h3>必須項目</h3>
+<?php ob_start(); ?>
+<style type="text/css">
+/**
+ * [parts] フォーム要素
+ */
+table.form_elements {
+}
+table.form_elements .form_elements-must{
+	color:#ff0000;
+	font-weight:bold;
+	display:block;
+}
+</style>
+<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+<div class="unit">
+	<table class="form_elements">
+		<thead>
+			<tr>
+				<th>入力項目名</th>
+				<th>入力フィールド</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>テキスト入力<span class="form_elements-must">必須</span></th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>全角カナで入力してください。</li>
+						<li>8文字以上入力してください。</li>
+					</ul>
+					<input type="text" name="" value="" />
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div><!-- /.unit -->
+
+
+<h3>エラー表示</h3>
+<?php ob_start(); ?>
+<style type="text/css">
+/**
+ * [parts] フォーム要素
+ */
+table.form_elements {
+}
+table.form_elements thead{
+	display:none;
+}
+table.form_elements .form_elements-error{
+}
+table.form_elements .form_elements-error th{
+	background-color:#ffcccc;
+}
+table.form_elements .form_elements-error td{
+	background-color:#fff2f2;
+}
+table.form_elements ul.form_elements-errors{
+	color:#ff0000;
+	margin:0px; padding:0px;
+}
+table.form_elements ul.form_elements-errors li{
+	list-style-type:none;
+	margin:0px;
+}
+</style>
+<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
+<div class="unit">
+	<table class="form_elements">
+		<thead>
+			<tr>
+				<th>入力項目名</th>
+				<th>入力フィールド</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class="form_elements-error">
+				<th>テキスト入力<span>必須</span></th>
+				<td>
+					<ul class="form_elements-notes">
+						<li>全角カナで入力してください。</li>
+						<li>8文字以上入力してください。</li>
+					</ul>
+					<ul class="form_elements-errors">
+						<li>全角カナで入力してください。</li>
+						<li>8文字以上入力してください。</li>
+					</ul>
+					<input type="text" name="" value="" />
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div><!-- /.unit -->
+
+
+<h3>送信系ボタン</h3>
+<p>
+	送信系ボタンは、ユニットモジュールとして設計されています。<br />
+	<a href="../units/">ユニットモジュールのページ</a>を参照してください。<br />
+</p>
+
+</form>
 
 
